--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-api</artifactId>
-      <version>7.52.0.Final-redhat-00007</version>
-      <scope>provided</scope>
+      <version>7.59.0.Final</version>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
